styles/Home.module.scss
/* ... */
@keyframes show-podium {
    from {
        transform: translateY(100%);
    }
    to {
        transform: translateY(0);
        opacity: 1;
    }
}

.footer {
    padding: 80px 0;
    background-color: var(--color-primary);
    border-top: 1px solid var(--color-secondary);
    position: relative;
    color: var(--text-light-primary);
    font-size: 40px;
    font-weight: 700;
    display: flex;
    flex-direction: column;
    align-items: center;

    &::after, &:before {
        content: '';
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
    }
    &::after {
        background-color: var(--color-tertiary);
    }
    &:before {
        background-color: var(--color-primary);
        z-index: 1;
    }
    &:not(.hidden)::after, &:not(.hidden):before {
        animation: show-footer 1s forwards;
    }
    &:not(.hidden)::after {
        animation-delay: .7s;
    }
}
@keyframes show-footer {
    from {
        height: 100%;
        top: 0;
    }
    to {
        height: 0;
        top: 100%;
    }
}
.footer-button {
    margin-top: 30px;
    padding: 0 !important;

    a {
        padding: 17px 40px;
        font-size: 14px;
    }
}

@media (max-width: 1000px) {
    .header {
        h1 {
            font-size: 38px;
        }
        h2 {
            font-size: 29px;
        }
        p {
            font-size: 18px;
        }
    }
    .header-content {
        padding-top: 170px;
    }
    .project-image-content {
        &.active {
            width: 100% !important;
            height: 95vh;
        }
    }
}
@media (max-width: 900px) {
    .project-cards {
        --row-amount: 2;
    }
    .technology-podiums {
        --row-amount: 2;
        gap: 20px;
    }
    .technology-podium {
        margin: 0;
        height: unset !important;
        animation-delay: unset !important;
    }
    .technology-podium-content {
        border-radius: var(--border-radius);
    }
}
@media (max-width: 800px) {
    .technology-podiums {
        flex-direction: column;
    }
    .technology-podium {
        margin: 0;
        width: 100%;
        text-align: center;
    }
}
@media (max-width: 700px) {
    .about-header, .projects-header {
        font-size: 40px;
    }
    .header-content {
        flex-direction: column;
    }
    .header-animation {
        margin: 0 auto;
        margin-top: 80px;
        margin-bottom: 120px;
        width: 350px;
    }
    .animation-interface {
        width: 350px;
    }
    .animation-progress {
        width: 140px;
        height: 100px;
        font-size: 12px;

        span {
            font-size: 24px;
        }
    }
    .animation-icon {
        right: -35px;
        top: -60px;
        svg {
            width: 70px;
        }
    }
    .about-container {
        margin-bottom: 120px;
        padding-top: 40px;
    }
    .about-content {
        flex-direction: column;
    }
    .about-tabs {
        display: flex;
        margin-bottom: 10px;
    }
    .about-card {
        margin-left: 0;
    }
    .projects-container {
        padding-top: 50px;
        margin-bottom: 150px;
    }
    .project-tiles-container {
        gap: 120px;
    }
    .project-tile {
        flex-direction: column;
        gap: 0;
    }
    .project-tile-main {
        order: 0 !important;
    }
    .project-tile-image {
        width: 100%;
        height: 100%;
    }
    .technologies {
        padding-top: 25px;
        padding-bottom: 25px;
    }
}
@media (max-width: 600px) {
    .project-cards {
        --row-amount: 1;
    }
    .animation-progress {
        left: -20px;
        bottom: -20px;
    }
    .navbar {
        top: 20px;
    }
    .navbar-tab-container {
        position: fixed;
        left: 100%;
        top: 0;
        width: 100%;
        height: 100%;
        background-color: var(--color-tertiary);
        z-index: -1;
        transition: left .4s;

        &.mobile-visible {
            left: 0;

            .navbar-tab {
                opacity: 1;
                transform: translateX(0);
                
                &:nth-of-type(1) {
                    transition-delay: .3s;
                }
                &:nth-of-type(2) {
                    transition-delay: .4s;
                }
                &:nth-of-type(3) {
                    transition-delay: .5s;
                }
                &:nth-of-type(4) {
                    transition-delay: .6s;
                }
            }
        }
    }
    .navbar-tab-container {
        flex-direction: column;
        display: flex;
        gap: 20px;
        padding-top: 160px;
    }
    .navbar-tab {
        font-size: 25px;
        opacity: 0;
        transform: translateX(20px);
        transition: opacity .5s, transform .5s;
    }
    .ham {
        display: block;
    }
    .header-content {
        padding-top: 140px;
    }
    .technology-podiums {
        --row-amount: 1;
    }
    .footer {
        font-size: 30px;
    }
}
@media (max-width: 500px) {
    .header-animation {
        margin-bottom: 180px;
    }
    .project-tile-title {
        font-size: 28px;
    }
    .project-tile-footer {
        flex-direction: column;
        gap: 25px;
    }
    .project-tile-button {
        width: 100%;
        justify-content: center;
        
        a {
            padding: 15px 0;
        }
    }
    .project-tile-preview {
        min-width: unset;
    }
}

